--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>自己紹介</title>
-    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <h1>自己紹介</h1>
@@ -23,7 +23,7 @@
     </table>
     <div class="box">
     <h2>泉田一星</h2>
-    <img src="images/IMG_1677.JPG" alt="" width="500" height="350">
+    <img src="IMG_1677.JPG" alt="" width="500" height="350">
     <p>大学2年生で、猫とゲームが好き</p>
     <h3>通っている大学</h3>
     <p>
