--- a/hobby.html
+++ b/hobby.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <table border="1">
@@ -21,10 +21,10 @@
     <div class="box">
         <h1>私の趣味</h1>
         <h2>ゲーム</h2>
-        <img src="images/IMG_1442.jpeg" alt="" width="250" height="300">
+        <img src="IMG_1442.jpeg" alt="" width="250" height="300">
         <p>親の影響で小さな頃からゲームが大好きで、たくさんのゲームをやっている。中でもポケモンを始めとした有名なタイトルは毎シリーズ購入している。</p>
         <h2>スポーツ</h2>
-        <img src="images/IMG_1683.jpeg" alt="" width="250" height="300">
+        <img src="IMG_1683.jpeg" alt="" width="250" height="300">
         <p>たまに友達と集まってバスケやサッカーなどのスポーツをして楽しむ。</p>
     </div>
 </body>
