--- a/work.html
+++ b/work.html
@@ -5,7 +5,7 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Document</title>
-  <link rel="stylesheet" href="css/style.css">
+  <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <table border="1">
@@ -23,14 +23,14 @@
   <h2>ショコラ</h2>
   <table border="2">
     <tr>
-      <th><img src="images/IMG_1046.jpeg" alt="" width="250" height="300"></th>
+      <th><img src="IMG_1046.jpeg" alt="" width="250" height="300"></th>
       <th><p>3年前から実家にいる先住猫。私に一番懐いていて、帰省した際はよく一緒に寝ている。最近太り気味。</p></th>
     </tr>
   </table>
   <h2>ハク</h2>
   <table border="2">
     <tr>
-      <th><img src="images/IMG_1425.jpeg" alt="" width="250" height="300"></th>
+      <th><img src="IMG_1425.jpeg" alt="" width="250" height="300"></th>
       <th><p>去年の7月からいるオス猫。若いので活発であるが、暴れすぎて物を壊しがち。よくショコラに怒られている。</p></th>
     </tr>
   </table>
